fix after fix (about button)

--- a/src/main/resources/templates/email/verify.html
+++ b/src/main/resources/templates/email/verify.html
@@ -45,10 +45,10 @@
                             <tr>
                                 <td align="center">
                                     <a th:href="${activationLink}"
-                                       style="display:block;width:100%;max-width:520px;text-align:center;text-decoration:none;
-                            padding:16px 18px;border-radius:12px;font-size:16px;font-weight:700;color:#fff;
-                            background:#45914E;
-                            box-shadow:0 0 30px rgba(34,197,94,.40);">
+                                       style="display:block;width:100%;margin:0;box-sizing:border-box;
+                                       text-align:center;text-decoration:none;padding:16px 18px;border-radius:12px;
+                                       font-size:16px;font-weight:700;color:#fff;background:#45914E;
+                                       box-shadow:0 0 30px rgba(34,197,94,.40);">
                                         Активувати акаунт →
                                     </a>
                                 </td>
